// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/Common/Content - CardSelector should not render no results message when cardDataLoading 1`] = `
<pf-card-selector
  cardData$={[Function ScalarObservable]}
  cardDataError$={[Function ScalarObservable]}
  cardDataLoading$={[Function ScalarObservable]}
  cardDataSubscription={[Function Subscriber]}
  cardIdentifier={[Function Function]}
  cardIsDisabled={[Function Function]}
  onCardSelection={[Function EventEmitter]}
  onReload={[Function EventEmitter]}
>
  <div
    class="filter-container"
  >
    
    
    
  
  </div>
  <div
    class="selections-container"
  >
    
    
    <div
      class="results-container"
    >
      
  
      
      
      
  
      
      
      
  
    
    </div>
    
  
    
    
    
  
  
  </div>
  
</pf-card-selector>
`;

exports[`UI/Common/Content - CardSelector should render no results message when there is no cardData 1`] = `
<pf-card-selector
  cardData$={[Function ScalarObservable]}
  cardDataError$={[Function ScalarObservable]}
  cardDataLoading$={[Function ScalarObservable]}
  cardDataSubscription={[Function Subscriber]}
  cardIdentifier={[Function Function]}
  cardIsDisabled={[Function Function]}
  onCardSelection={[Function EventEmitter]}
  onReload={[Function EventEmitter]}
>
  <div
    class="filter-container"
  >
    
    
    
  
  </div>
  <div
    class="selections-container"
  >
    
    
    <div
      class="results-container"
    >
      
  
      
      
      
  
      
      
      
      
  
        
      <div
        class="d-flex justify-content-center flex-column flex-grow-1"
      >
        
          
        <h5
          class="align-self-center"
        >
          No Results
        </h5>
        
          
        <h5
          class="align-self-center"
        >
          
            
          <small
            class="text-muted"
          >
            Please change your filter criteria to search again.
          </small>
          
          
        </h5>
        
        
      </div>
      
  
      
      
  
    
    </div>
    
  
    
    
    
  
  
  </div>
  
</pf-card-selector>
`;

exports[`UI/Common/Content - CardSelector should render pf-card components for each dataItem 1`] = `
<pf-card-selector
  cardData$={[Function ScalarObservable]}
  cardDataError$={[Function ScalarObservable]}
  cardDataLoading$={[Function ScalarObservable]}
  cardDataSubscription={[Function Subscriber]}
  cardIdentifier={[Function Function]}
  cardIsDisabled={[Function Function]}
  onCardSelection={[Function EventEmitter]}
  onReload={[Function EventEmitter]}
>
  <div
    class="filter-container"
  >
    
    
    
  
  </div>
  <div
    class="selections-container"
  >
    
    
    <div
      class="results-container"
    >
      
  
      
      
      
      
        
      <pf-async-container
        loadingerrormessage="There was an error."
      >
        
          
        
        <pf-card>
          
          
        </pf-card>
        <pf-card>
          
          
        </pf-card>
        
        
      </pf-async-container>
      
  
      
      
  
      
      
      
  
    
    </div>
    
  
    
    
    
  
  
  </div>
  
</pf-card-selector>
`;

exports[`UI/Common/Content - CardSelector should show selection container when a card is selected 1`] = `
<pf-card-selector
  cardData$={[Function ScalarObservable]}
  cardDataError$={[Function ScalarObservable]}
  cardDataLoading$={[Function ScalarObservable]}
  cardDataSubscription={[Function Subscriber]}
  cardIdentifier={[Function Function]}
  cardIsDisabled={[Function Function]}
  handleCardSelectionEvent={[Function Function]}
  onCardSelection={[Function EventEmitter]}
  onReload={[Function EventEmitter]}
  selectedCard={[Function Object]}
>
  <div
    class="filter-container"
  >
    
    
    
  
  </div>
  <div
    class="selections-container"
  >
    
    
    <div
      class="results-container"
    >
      
  
      
      
      
  
      
      
      
      
  
        
      <div
        class="d-flex justify-content-center flex-column flex-grow-1"
      >
        
          
        <h5
          class="align-self-center"
        >
          No Results
        </h5>
        
          
        <h5
          class="align-self-center"
        >
          
            
          <small
            class="text-muted"
          >
            Please change your filter criteria to search again.
          </small>
          
          
        </h5>
        
        
      </div>
      
  
      
      
  
    
    </div>
    
  
    
    
    
    
  
      
    <div
      class="selection-container mt-2"
    >
      
        
      
      
      
    </div>
    
  
    
    
  
  
  </div>
  
</pf-card-selector>
`;

exports[`UI/Common/Content - CardSelector should transclude content and templates 1`] = `
<ng-component
  cardData$={[Function ScalarObservable]}
  cardDataError$={[Function ScalarObservable]}
  cardDataLoading$={[Function ScalarObservable]}
  cardSelector={[Function Function]}
  cardSelectorInstance={[Function CardSelectorComponent]}
  disabledExpression={[Function Function]}
>
  
      <pf-card-selector
    ng-reflect-card-body-template="[object Object]"
    ng-reflect-card-data-error_="[object Object]"
    ng-reflect-card-data-loading_="[object Object]"
    ng-reflect-card-data_="[object Object]"
    ng-reflect-card-identifier="function (card) {return card ?"
    ng-reflect-card-is-disabled="function (card) {return false;"
    ng-reflect-on-card-selected-template="[object Object]"
  >
    <div
      class="filter-container"
    >
      
    
      
      
          SEARCH FILTERS TRANSCLUDED!
        
      
  
    </div>
    
  
    <div
      class="selections-container"
    >
      
    
      <div
        class="results-container"
      >
        
  
      
        
        
        
        
        <pf-async-container
          loadingerrormessage="There was an error."
        >
          
          
          
          <pf-card>
            
          
          </pf-card>
          <pf-card>
            
          
          </pf-card>
          
        
        </pf-async-container>
        
  
      
        
  
      
        
        
  
    
      </div>
      
  
    
      
      
      
  
      
      <div
        class="selection-container mt-2"
      >
        
        
        
        
        Mock Card Selected Template - 1
      
        
      
      </div>
      
  
    
      
  
  
    </div>
    
  
  </pf-card-selector>
      
      
  
    
</ng-component>
`;
